# know-ai

./: .gitignore  README.md  dev-all.sh  dev-clean.sh  dev-stop.sh  docker-compose.yml  litellm.yaml  package.json  pnpm-lock.yaml  readme.txt  structure.txt  tsconfig.base.json  verify-env.py
apps/api/: package.json  pnpm-lock.yaml
apps/api/src/: db.ts  mockDb.ts  server.ts  setup-db.sql  test-db.ts  types.d.ts
apps/assistant-streamlit/: Dockerfile  README.md  app-enhanced.py  requirements.txt  run.bat  run.sh
apps/web/: README.md  copy-env.js  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.cjs
apps/web/app/: globals.css  layout.tsx  (+1 more)
docs/: api.http
readme/: DATABASE_INTEGRATION_COMPLETE.md  ENHANCED_PROCESSING_FLOWS.md  ENV_SETUP_GUIDE.md  FRONTEND_ENV_FIX.md  INTEGRATION_SUCCESS.md  OCR_MIGRATION_SUMMARY.md  WEBSOCKET_DEBUG_GUIDE.md  WEBSOCKET_FIX.md  readme-simpler.txt  readme.txt
services/: research.ipynb
services/agno/: main.py
services/chat/: app.py  pg_client.py  pyproject.toml  zara_verificator.py
services/ingest/: chunker.py  main.py  pg_client.py  pyproject.toml  rag.py  weaviate_client.py
services/ingest/ingest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/ingest/tests/: test_chunker.py
services/parsers/: main.py  pyproject.toml
setup-test/: setup-minio.mjs  start-agno.ps1  start-minio.bat  start-minio.ps1  test-agno.js  test-embeddings.js  test-integration.js  test-integration.py  test-services.js  test-simple-websocket.py  test-upload.js  test-websocket-simple.py  test-websocket.py  test_ocr.py
(+47 files in other folders)
