[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "weaviate-client",
  "pandas",
  "openpyxl",
  "psycopg[binary,pool]",
  "PyMuPDF",
  "pytesseract",
  "pillow",
  "numpy",
  "agno-ai"
]

# <-- Ini kuncinya: deklarasikan modul top-level
[tool.setuptools]
py-modules = ["main", "chunker", "pg_client"]
# Kalau memang ada file rag.py dan Anda ingin pakai, tambahkan juga:
# py-modules = ["main", "chunker", "weaviate_client", "rag"]
